found and fixed mystery margin, made some alignment adjustments

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ h1 {
 }
 
 .details {
-    margin-left: -80px;
+    margin-left: -8vw;
 }
 
 #mainNav ul {
@@ -205,7 +205,7 @@ h1 {
     width: 400px;
     background-color: rgb(128, 128, 128);
     border-radius: 50%;
-    margin-left: 50px;
+    margin-left: 15%;
     margin-top: 200px;
     /* margin-bottom: 100px; */
     opacity: 0;
@@ -221,6 +221,7 @@ h1 {
 
 .circ.scroll-anim {
     opacity: 1;
+    transform: translateX(-20%);
 }
 
 .vertLine {
@@ -297,8 +298,9 @@ h1 {
     font-size: 35px;
     /* font-weight: bold; */
     line-height: 65px;
-    width: 800px;
-    margin-left: 90px;
+    width: 80%;
+    margin-left: 15%;
+    
 }
 
 .potInfo_2 {
@@ -314,26 +316,28 @@ h1 {
     height: 197px;
     margin-top: 200px;
     margin-bottom: -500px;
-    margin-left: 250px;
+    margin-left: 22vw;
     transition: all 1s ease;
     -moz-transition: all 1s ease;
     -ms-transition: all 1s ease;
     -o-transition: all 1s ease;
-    transition-delay: 1s;
+    transition-delay: 2s;
     -moz-transition-delay: 1s;
     -ms-transition-delay: 1s;
     -o-transition-delay: 1s;
     opacity: 0;
-    transform: scale(0%);
+    
 
 }
 
 .potInfo_2  p.textimg1-anim {
     opacity: 1;
-    transform: scale(100%);
+    transform: translateX(10%)
+    
 }
 
 .img_1 {
+    position: relative;
     height: 1000px;
     width: 500px;
     border-radius: 1000px 0 0 1000px;
@@ -371,17 +375,47 @@ h1 {
     /* font-weight: bold; */
     line-height: 65px;
     /* font-weight: 2px; */
-    width: 700px;
-    margin-left: 13.5vw;
+    width: 80%;
+    margin-left: 14vw;
     color: white;
+    transition: all 2s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition-delay: 2s;
+    -moz-transition-delay: 1s;
+    -ms-transition-delay: 1s;
+    -o-transition-delay: 1s;
+    opacity: 0;
+
 }
 
+.potInfo_3  p.textimg2-anim {
+    opacity: 1;
+}
+    
+
 .img_2 {
-    width: 840px;
+    position: relative;
+    width: 100%;
     height: 840px;
     background-color: rgb(184, 184, 184);
     /* margin-top: 40px; */
-    margin-left: 70px;
+    opacity: 0;
+    transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition-delay: 1s;
+    -moz-transition-delay: 1s;
+    -ms-transition-delay: 1s;
+    -o-transition-delay: 1s;
+    z-index: -1;
+}
+.img_2.scroll-img2 {
+    opacity: 1;
+    transform: translate(0%, 6%) matrix(2, 0, 0, 1, 0, 0)
+
 }
 
 .potInfo_4 {
@@ -410,5 +444,5 @@ h1 {
     /* margin-left: 0px; */
 }
 
-/* Animation Cindy */
+/* Animation box slide left to right  */
 
